feat: page -> slice 변경 테스트