@@ -1,7 +1,8 @@
 package com.min.bunjang.security;
 
 import com.min.bunjang.member.model.Member;
-import com.sun.tools.javac.util.List;
+
+import java.util.Arrays;
 import lombok.Getter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -13,7 +14,7 @@ public class MemberAccount extends User {
     private Member member;
 
     public MemberAccount(Member member) {
-        super(member.getEmail(), member.getPassword(), List.of(new SimpleGrantedAuthority(String.valueOf(member.getMemberRole()))));
+        super(member.getEmail(), member.getPassword(), Arrays.asList(new SimpleGrantedAuthority(String.valueOf(member.getMemberRole()))));
         this.member = member;
     }
 
